--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,14 +25,14 @@
             <a class="nav-link" href="/">World Map <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="table">Table</a>
+            <a class="nav-link" href="/table">Table</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">New</a>
             <div class="dropdown-menu" aria-labelledby="dropdownId">
-              <a class="dropdown-item" href="topconfirm">Top 10 Confirmed</a>
-              <a class="dropdown-item" href="topdeath">Top 10 Death</a>
-              <a class="dropdown-item" href="toprecover">Top 10 Recovered</a>
+              <a class="dropdown-item" href="/topconfirm">Top 10 Confirmed</a>
+              <a class="dropdown-item" href="/topdeath">Top 10 Death</a>
+              <a class="dropdown-item" href="/toprecover">Top 10 Recovered</a>
             </div>
           </li>
         </ul>
@@ -111,7 +111,6 @@
                     .openPopup()
                     .addTo(map);
             }
-        
     </script>
     <% }); %>
 
