--- a/views/table.ejs
+++ b/views/table.ejs
@@ -22,17 +22,17 @@
       <div class="collapse navbar-collapse" id="collapsibleNavId">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/">World Map <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="/table">Table</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">New</a>
             <div class="dropdown-menu" aria-labelledby="dropdownId">
-              <a class="dropdown-item" href="/views/topconfirm">Top 10 Confirmed</a>
-              <a class="dropdown-item" href="#">Top 10 Death</a>
-              <a class="dropdown-item" href="#">Top 10 Recovered</a>
+              <a class="dropdown-item" href="/topconfirm">Top 10 Confirmed</a>
+              <a class="dropdown-item" href="/topdeath">Top 10 Death</a>
+              <a class="dropdown-item" href="/toprecover">Top 10 Recovered</a>
             </div>
           </li>
         </ul>
@@ -44,7 +44,6 @@
     </nav>
 
     <div class="container">
-      <div id="mapid"></div>
       <table class="table">
         <thead>
           <tr>
@@ -83,37 +82,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
-    <script>
-      var map = L.map('mapid').setView([0, 0], 2);
-      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-          attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-      }).addTo(map);
-  </script>
-
-  <% resultData.forEach(function(data){ %>
-    <script>
-        var goldIcon = new L.Icon({
-            iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-red.png',
-            shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
-            iconSize: [20, 30],
-            iconAnchor: [12, 41],
-            popupAnchor: [1, -34],
-            shadowSize: [5, 5]
-        });
-            var markers = [
-                ["<b style='font-size:15pt;'> <%=data.country%> </b> <br><b style='font-size:10pt;'> Confirmed : <%=data.confirm%><b> <br><b style='font-size:10pt;'> Death : <%=data.dead%><b> <br><b style='font-size:10pt;'> Recovered : <%=data.recover%><b>", ('<%=data.lat%>'), ('<%=data.long%>')],
-            ];
-            for (var i = 0; i < markers.length; i++) {
-                marker = L.marker([markers[i][1], markers[i][2]], {
-                        icon: goldIcon
-                    })
-                    .bindPopup(markers[i][0])
-                    .openPopup()
-                    .addTo(map);
-            }
-        
-    </script>
-    <% }); %>
 
   </body>
 </html>
