--- a/views/topconfirm.ejs
+++ b/views/topconfirm.ejs
@@ -22,17 +22,17 @@
       <div class="collapse navbar-collapse" id="collapsibleNavId">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/">World Map <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="/table">Table</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">New</a>
             <div class="dropdown-menu" aria-labelledby="dropdownId">
-              <a class="dropdown-item" href="/views/topconfirm">Top 10 Confirmed</a>
-              <a class="dropdown-item" href="#">Top 10 Death</a>
-              <a class="dropdown-item" href="#">Top 10 Recovered</a>
+              <a class="dropdown-item" href="/topconfirm">Top 10 Confirmed</a>
+              <a class="dropdown-item" href="/topdeath">Top 10 Death</a>
+              <a class="dropdown-item" href="/toprecover">Top 10 Recovered</a>
             </div>
           </li>
         </ul>
@@ -93,6 +93,7 @@ var chart = new Chart(ctx, {
     type: 'line',
 
     // The data for our dataset
+    
     data: {
         labels: ['January', 'February', 'March', 'April', 'May', 'June', 'July'],
         datasets: [{
