--- a/views/table.ejs
+++ b/views/table.ejs
@@ -13,18 +13,14 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
-      <a class="navbar-brand" href="#">Covid - 19</a>
-      <!-- <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-          aria-expanded="false" aria-label="Toggle navigation">
-        <span class="home-toggler-icon"></span>
-      </button> -->
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+      <a class="navbar-brand" href="/">Covid - 19</a>
       <div class="collapse navbar-collapse" id="collapsibleNavId">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item active">
+          <li class="nav-item ">
             <a class="nav-link" href="/">World Map <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="/table">Table</a>
           </li>
           <li class="nav-item dropdown">
@@ -36,10 +32,6 @@
             </div>
           </li>
         </ul>
-        <!-- <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form> -->
       </div>
     </nav>
 
@@ -48,7 +40,6 @@
         <thead>
           <tr>
             <th>Country</th>
-            <th>Province</th>
             <th>Confirmed</th>
             <th>Death</th>
             <th>Recovered</th>
@@ -60,14 +51,15 @@
               <td>
                     <%=data.country%>
             </td>
-              <td><%=data.state%></td>
               <td><%=data.confirm%></td>
               <td><%=data.dead%></td>
               <td><%=data.recover%></td>
               <td scope="row">
-                <a href="/dataCountry/<%=data.country%>">
+                <button type="button" class="btn btn-primary">
+                  <a style="color: aliceblue;" href="/dataCountry/<%=data.country%>">
                     Checkmore
-                </a>
+                  </a>
+                </button>
             </td>
             </tr>
             <% }); %>
