--- a/views/dataCountry.ejs
+++ b/views/dataCountry.ejs
@@ -5,22 +5,18 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+     <!-- Bootstrap CSS -->
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
-    <link rel="stylesheet" href="stylesheets/map.css">
-  </head>
+    <link rel="stylesheet" href="/stylesheets/map.css">
+   </head>
   <body>
-   
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
-      <a class="navbar-brand" href="#">Covid - 19</a>
-      <!-- <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-          aria-expanded="false" aria-label="Toggle navigation">
-        <span class="home-toggler-icon"></span>
-      </button> -->
+
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+      <a class="navbar-brand" href="/">Covid - 19</a>
       <div class="collapse navbar-collapse" id="collapsibleNavId">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="/">World Map <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
@@ -35,15 +31,11 @@
             </div>
           </li>
         </ul>
-        <!-- <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form> -->
       </div>
     </nav>
 
+    <div id="mapid1"></div>
     <div class="container">
-      <div id="mapid"></div>
       <table class="table">
         <thead>
           <tr>
@@ -65,9 +57,11 @@
               <td><%=data.dead%></td>
               <td><%=data.recover%></td>
               <td scope="row">
-                <a href="/dataCountry/<%=data.country%>">
-                    Checkmore
+                <button type="button" class="btn btn-primary">
+                <a style="color: aliceblue;" href="/dataProvince/<%=data.country%>/<%=data.state%>">
+                    ViewDeatil
                 </a>
+              </button>
             </td>
             </tr>
             <% }); %>
@@ -76,22 +70,21 @@
 
 
     </div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
     <script>
-      var map = L.map('mapid').setView([0, 0], 2);
+      var map = L.map('mapid1').setView([0, 0], 2);
       L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
           attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
       }).addTo(map);
   </script>
 
-  <% resultData.forEach(function(data){ %>
+  
     <script>
-        var goldIcon = new L.Icon({
+      '<% resultData.forEach(function(data){ %>'
+        var Icon = new L.Icon({
             iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-red.png',
             shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
             iconSize: [20, 30],
@@ -100,18 +93,18 @@
             shadowSize: [5, 5]
         });
             var markers = [
-                ["<b style='font-size:15pt;'> <%=data.country%> </b> <br><b style='font-size:10pt;'> Confirmed : <%=data.confirm%><b> <br><b style='font-size:10pt;'> Death : <%=data.dead%><b> <br><b style='font-size:10pt;'> Recovered : <%=data.recover%><b>", ('<%=data.lat%>'), ('<%=data.long%>')],
+                ["<b style='font-size:15pt;'> <%=data.state%> </b> <br><b style='font-size:10pt;'> Confirmed : <%=data.confirm%><b> <br><b style='font-size:10pt;'> Death : <%=data.dead%><b> <br><b style='font-size:10pt;'> Recovered : <%=data.recover%><b><br><a style='font-size:10pt;' href='/dataProvince/<%=data.country%>/<%=data.state%>'>Viewmore</a>", ('<%=data.lat%>'), ('<%=data.long%>')],
             ];
             for (var i = 0; i < markers.length; i++) {
                 marker = L.marker([markers[i][1], markers[i][2]], {
-                        icon: goldIcon
+                        icon: Icon
                     })
                     .bindPopup(markers[i][0])
                     .openPopup()
                     .addTo(map);
             }
-        
+            '<% }); %>'
     </script>
-    <% }); %>
+   
 
 </html>
